<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/logoText"
        android:textColor="@color/secondaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

<!--Start of User Full Name-->
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:hint="@string/fullNamePlaceholder"
        android:textColorHint="@color/secondaryDark"
        android:textColor="@color/secondaryDark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoText" />

    <TextView
        android:id="@+id/fullNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/label"
        android:paddingHorizontal="8dp"
        android:paddingVertical="3dp"
        android:text="@string/fullNameLabel"
        android:textAllCaps="true"
        android:textColor="@color/secondaryDark"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name" />

    <TextView
        android:id="@+id/fullNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fullNameError"
        android:textColor="@color/colorAccent"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />
<!--End of User Full Name-->

<!--Start of Phone Number-->
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="phone"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:hint="@string/phoneNumberPlaceholder"
        android:textColorHint="@color/secondaryColor"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/phoneNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/label"
        android:paddingHorizontal="8dp"
        android:paddingVertical="3dp"
        android:text="@string/phoneNumberLabel"
        android:textAllCaps="true"
        android:textColor="@color/secondaryDark"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@+id/phoneNumber"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber" />
    <TextView
        android:id="@+id/phoneNumberError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phoneNumberError"
        android:textColor="@color/colorAccent"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber" />
<!--End of user Phone Number-->

    <!--Start of User Email-->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/emailPlaceholder"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:textColor="@color/secondaryDark"
        android:textColorHint="@color/secondaryColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/label"
        android:paddingHorizontal="8dp"
        android:paddingVertical="3dp"
        android:text="@string/emailLabel"
        android:textAllCaps="true"
        android:textColor="@color/secondaryDark"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email" />
    <TextView
        android:id="@+id/emailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/emailError"
        android:textColor="@color/colorAccent"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@id/email" />
    <!--End of user email-->

<!--Start Spinner-->

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/genderText"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/logoText"
        android:background="@drawable/button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.181" />


</androidx.constraintlayout.widget.ConstraintLayout>